# RunAssessor

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: runassessor.py
src/runassessor/: __init__.py  metadata_handler.py  mzML_assessor.py  runassessor.py
tests/: pytest.ini  test_filter_strings.py  test_large_mzMLs.py  test_metadata_handler.py  test_process_mzML.py
tests/expected_output/: chlo_6_tiny_study_metadata.json
