[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "runassessor"
version = "0.9.0"
description = "A tool to extract empircally identifiable metadata from proteomics mass-spectrometry mzML files prior to identification processing."
authors = [
  { name="Eric Deutsch", email="edeutsch@systemsbiology.org" },
]
readme = "README.md"
keywords = ["proteomics", "mass-spectrometry", "mzML"]
license = "Apache-2.0"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "lxml",
    "matplotlib",
    "scipy",
    "pyteomics",
    "pypdf",
	"pandas",
	"python-dateutil"
]

[tool.setuptools.package-data]
runassessor = ["*.tsv", "*.pdf", "*.txt"]

[project.urls]
Homepage = "https://github.com/RunAssessor/RunAssessor"
Issues = "https://github.com/RunAssessor/RunAssessor/issues"

[project.scripts]
# Format is: command_name = "module.path:function_name"
runassessor = "runassessor.runassessor:main"
